--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
    
       <td>
           <button class="btn btn-danger btn-sm" id="vaciar-carrito">
-              vaciar todo
+              Vaciar todo
           </button>
           <button class="btn btn-primary btn-sm" id="terminar-compra">
             Terminar Compra
